[package]
name = "kube_app"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "1.1.0", features = ["derive", "runtime", "client", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
